--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -71,7 +71,7 @@
             [settings]="userSettings"
             (sendTestNotification)="sendTestNotification()"
             (sendTestAlert)="sendTestAlert()"
-            (settingToggled)="userSettingsFieldUpdated()">
+            (settingToggled)="updateUserSettings()">
           </notification-devices>
         </md-tab>
 
