--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
@@ -35,7 +35,7 @@
         </tbody>
       </table>
 
-      <div class="spinner">
+      <div class="spinner" *ngIf="notificationsService.requestInProgress$ | async">
         <div></div><div></div><div></div>
       </div>
     </div>
