Add index table loaders (placeholders)

--- a/src/app/pages/accounts-page/account-index/accounts.component.html
+++ b/src/app/pages/accounts-page/account-index/accounts.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
