--- a/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates-shared/email-templates-shared.component.html
@@ -2,6 +2,7 @@
   <md-card-content class="entity-index__card__content">
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
