--- a/src/app/pages/event-hooks-page/event-hook-index/event-hooks-custom/event-hooks-custom.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-index/event-hooks-custom/event-hooks-custom.component.html
@@ -5,6 +5,7 @@
 
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
