--- a/src/app/pages/event-hooks-page/event-hook-index/event-hooks-shared/event-hooks-shared.component.html
+++ b/src/app/pages/event-hooks-page/event-hook-index/event-hooks-shared/event-hooks-shared.component.html
@@ -3,6 +3,7 @@
 
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
