--- a/src/app/pages/product-schedule-page/product-schedules-index/product-schedules.component.html
+++ b/src/app/pages/product-schedule-page/product-schedules-index/product-schedules.component.html
@@ -11,6 +11,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         (selected)="viewEntity($event.id)"
