--- a/src/app/pages/bills-page/bill-index/bills.component.html
+++ b/src/app/pages/bills-page/bill-index/bills.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
