--- a/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
+++ b/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
