--- a/src/app/pages/email-templates-page/email-templates-index/email-templates-custom/email-templates-custom.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates-custom/email-templates-custom.component.html
@@ -4,6 +4,7 @@
   <md-card-content class="entity-index__card__content">
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
