--- a/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
