--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-groups-index/merchant-provider-groups.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-groups-index/merchant-provider-groups.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
