--- a/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
