--- a/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
+++ b/src/app/pages/roles-page/roles-index/roles-index-custom/roles-index-custom.component.html
@@ -5,6 +5,7 @@
 
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
