--- a/src/app/pages/roles-page/roles-index/roles-index-shared/roles-index-shared.component.html
+++ b/src/app/pages/roles-page/roles-index/roles-index-shared/roles-index-shared.component.html
@@ -3,6 +3,7 @@
 
     <entities-table
       [data]="entities"
+      [loaded]="initialLoaded"
       [columnParams]="columnParams"
       [filterString]="filterValue"
       [serverError]="serverError"
