--- a/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
