--- a/src/app/pages/trackers-page/trackers-index/trackers.component.html
+++ b/src/app/pages/trackers-page/trackers-index/trackers.component.html
@@ -10,6 +10,7 @@
 
       <entities-table
         [data]="entities"
+        [loaded]="initialLoaded"
         [columnParams]="columnParams"
         [filterString]="filterValue"
         [serverError]="serverError"
