--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -78,6 +78,8 @@
         <md-tab>
           <notification-preferences
             [notificationSettings]="notificationSettings"
+            (sendTestNotification)="sendTestNotification()"
+            (sendTestAlert)="sendTestAlert()"
             (cancel)="cancelNotificationSettingsUpdate()"
             (save)="notificationSettingsUpdated()">
           </notification-preferences>
