--- a/src/app/navigation/alerts-quick/alerts-quick.component.scss
+++ b/src/app/navigation/alerts-quick/alerts-quick.component.scss
@@ -1,27 +1,31 @@
 alert-component {
   display: block;
-  margin: 10px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  margin: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   background: white;
 }
 
 .alerts-quick {
+  font-family: Roboto, sans-serif;
   &__more {
     display: flex;
-    margin: 10px;
-    padding: 15px;
+    margin: 5px;
+    padding: 20px 15px;
     align-items: center;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-    background: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background: #FD1F47;
 
     &__count {
-      font-size: 14px;
-      color: #5B9BE1;
+      font-size: 18px;
+      color: white;
     }
 
-    &__action {
+    md-icon {
       margin-left: auto;
-      font-size: 12px;
+      color: #FD90A5;
+      height: 28px;
+      width: 28px;
+      font-size: 28px;
       cursor: pointer;
     }
   }
