--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -17,7 +17,7 @@
     <div class="container">
       <router-outlet></router-outlet>
       <notifications-quick *ngIf="navigation.showNotifications | async" (close)="navigation.toggleNotifications(false)"></notifications-quick>
-      <div class="notifications-popup" [style.display]="!(navigation.showNotifications | async) ? 'block' : 'none'" [style.top]="alertTopOffsetCurrent + 'px'">
+      <div class="notifications-popup" [style.display]="!(navigation.showNotifications | async) ? 'block' : 'none'">
         <alerts-quick></alerts-quick>
       </div>
       <div class="clearfix"></div>
