--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -36,9 +36,9 @@
     }
   }
 
-  &-input--no-margin {
+  &-input--no-margin-top {
     .md-input-wrapper {
-      margin: 0;
+      margin-top: 0;
     }
   }
 }
