--- a/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.scss
+++ b/src/app/pages/profile-page/notification-devices/device-toggle-item/device-toggle-item.component.scss
@@ -1,47 +1,63 @@
 .container {
-  margin: 5px 0 10px;
+  margin: 8px 0 12px;
   display: flex;
   align-items: center;
 
   .icon {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     background-color: rgba(0,0,0,0.1);
   }
 
   .content {
-    margin: 0 12px 0 12px;
+    padding: 5px 12px;
     width: 160px;
+
+    &--shadow {
+      box-shadow: 0 0 6px rgba(0,0,0,0.25);
+    }
 
     .title {
       font-size: 14px;
+      font-weight: 500;
+
+      md-icon {
+        background: #E9E9E9;
+        border-radius: 2px;
+        padding: 1px;
+        font-size: 14px;
+        height: 14px;
+        width: 14px;
+        cursor: pointer;
+        margin-left: 10px;
+        color: #6C6C6C;
+      }
     }
 
     .subtitle {
-      display: flex;
-      align-items: center;
-      margin-top: 5px;
       color: rgba(0,0,0,0.5);
       font-size: 12px;
 
       .value {
-        width: 120px;
+        margin-top: 4px;
+        width: 160px;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
       }
-
-      md-icon {
-        font-size: 16px;
-        height: 16px;
-        width: 16px;
-        cursor: pointer;
-
-        &:first-of-type {
-          margin-left: auto;
-        }
-      }
     }
   }
+}
+
+md-input-container {
+  font-size: 14px;
+}
+
+.label {
+  font-size: 12px;
+  color: rgba(0,0,0,0.5);
+  font-weight: 500;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
