--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -29,3 +29,7 @@
   <registration-form></registration-form>
 </div>
 
+<div *ngIf="navigation.showCreateNewModal | async" class="create-order-modal-container">
+  <create-order (close)="navigation.setShowCreateNewModal(false)"></create-order>
+</div>
+
