--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -35,3 +35,20 @@ registration-form {
   width: 350px;
   font-family: Roboto, sans-serif;
 }
+
+.create-order-modal-container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding: 60px;
+  box-sizing: border-box;
+  background: rgba(0,0,0,0.5);
+
+  create-order {
+    display: block;
+    margin: auto;
+  }
+}
